--- a/gopayna/pubspec.yaml
+++ b/gopayna/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   webview_flutter_platform_interface: ^2.14.0
   url_launcher: ^6.2.5
   intl: ^0.19.0
+  path_provider: ^2.1.2
+  share_plus: ^7.2.1 
+  dropdown_search: ^5.0.6
+  
 
 
 dev_dependencies:
