--- a/gopayna/pubspec.yaml
+++ b/gopayna/pubspec.yaml
@@ -32,22 +32,24 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.8
-  uni_links: ^0.5.1
+  app_links: ^6.3.3
   flutter_paystack_plus: ^2.3.0
   pin_code_fields: ^8.0.0
   image_picker: ^1.0.7
-  http: ^1.5.0
+  http: ^1.2.2
   path: ^1.9.0
   http_parser: ^4.0.2
   permission_handler: ^12.0.1
   webview_flutter: ^4.7.0
-  webview_flutter_web: ^0.2.2+5
   webview_flutter_platform_interface: ^2.14.0
   url_launcher: ^6.2.5
   intl: ^0.19.0
   path_provider: ^2.1.2
   share_plus: ^7.2.1 
   dropdown_search: ^5.0.6
+
+dependency_overrides:
+  web: ^0.5.1
   
 
 
