--- a/gopayna/pubspec.yaml
+++ b/gopayna/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.19.0
   share_plus: ^7.2.1 
   dropdown_search: ^5.0.6
+  crypto: ^3.0.3
 
 dependency_overrides:
   web: ^0.5.1
@@ -72,8 +73,23 @@ flutter:
     - assets/waec_logo.png
     - assets/neco_logo.png
     - assets/jamb_logo.png
+    # Electricity DisCo logos
+    - assets/ikedc_logo.png
+    - assets/ekedc_logo.png
+    - assets/aedc_logo.png
+    - assets/kedco_logo.png
+    - assets/eedc_logo.png
+    - assets/phed_logo.png
+    - assets/ibedc_logo.png
+    - assets/kaedco_logo.png
+    - assets/jed_logo.png
+    - assets/bedc_logo.png
+    - assets/yedc_logo.png
+    - assets/appicon.png
   
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/appicon.jpeg"
+  image_path: "assets/appicon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/appicon.png"
