--- a/gopayna/android/app/build.gradle
+++ b/gopayna/android/app/build.gradle
@@ -28,7 +28,7 @@ android {
     defaultConfig {
         applicationId = "com.gopayna.app"
         minSdkVersion = flutter.minSdkVersion
-        targetSdk = 34
+        targetSdk = 35
         versionCode = flutter.versionCode
         versionName = flutter.versionName
         
@@ -49,7 +49,7 @@ android {
         release {
             signingConfig signingConfigs.release
             minifyEnabled true
-            shrinkResources true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
