Fix CodeMagic iOS build for App Store distribution
- Add proper keychain initialization for code signing
- Use app-store export method for IPA builds
- Separate workflows for App Store vs Simulator builds
- Clarify artifact outputs (IPA vs .app)
- Improve code signing setup process

--- a/gopayna/codemagic.yaml
+++ b/gopayna/codemagic.yaml
@@ -1,6 +1,7 @@
 workflows:
-  ios-workflow:
-    name: iOS Workflow
+  # iOS App Store Distribution Build
+  ios-appstore:
+    name: iOS App Store Build
     max_build_duration: 120
     instance_type: mac_mini_m1
     integrations:
@@ -10,51 +11,43 @@ workflows:
       xcode: latest
       cocoapods: default
       vars:
-        # iOS Bundle identifier
         BUNDLE_ID: "com.gopayna.app"
         APP_STORE_CONNECT_ISSUER_ID: Encrypted(...) # Add your App Store Connect Issuer ID
         APP_STORE_CONNECT_KEY_IDENTIFIER: Encrypted(...) # Add your App Store Connect Key ID
         APP_STORE_CONNECT_PRIVATE_KEY: Encrypted(...) # Add your App Store Connect Private Key
         CERTIFICATE_PRIVATE_KEY: Encrypted(...) # Add your iOS Distribution Certificate Private Key
-        # Optional: If you have a specific team ID
-        # APP_STORE_CONNECT_TEAM_ID: Encrypted(...)
-      node: 18
     cache:
       cache_paths:
         - $FLUTTER_ROOT/.pub-cache
-        - $HOME/.gradle/caches
         - $HOME/Library/Caches/CocoaPods
     triggering:
       events:
         - push
         - tag
-        - pull_request
       branch_patterns:
         - pattern: main
-          include: true
-          source: true
-        - pattern: develop
           include: true
           source: true
         - pattern: release/*
           include: true
           source: true
     scripts:
-      - name: Set up code signing settings on Xcode project
+      - name: Set up keychain for code signing
         script: |
-          xcode-project use-profiles
+          keychain initialize
       - name: Get Flutter dependencies
         script: |
           flutter pub get
       - name: Install CocoaPods dependencies
         script: |
           cd ios && pod install
-      - name: Set up provisioning profiles settings on Xcode project
+      - name: Set up code signing
         script: |
           xcode-project use-profiles
-      - name: Build ipa for distribution
+      - name: Build IPA for App Store
         script: |
           flutter build ipa --release \
+            --export-method=app-store \
             --build-name=1.0.$BUILD_NUMBER \
             --build-number=$BUILD_NUMBER
     artifacts:
@@ -70,13 +63,12 @@ workflows:
           failure: true
       app_store_connect:
         auth: integration
-        # Configuration for App Store Connect
         submit_to_testflight: true
-        submit_to_app_store: false # Set to true when ready for production
+        submit_to_app_store: false
         
-  # Optional: Add a debug workflow for testing
+  # iOS Development/Testing Build (Simulator)
   ios-debug:
-    name: iOS Debug Build
+    name: iOS Debug Build (Simulator)
     max_build_duration: 60
     instance_type: mac_mini_m1
     environment:
@@ -111,10 +103,11 @@ workflows:
       - name: Run Flutter tests
         script: |
           flutter test
-      - name: Build iOS debug
+      - name: Build iOS debug for simulator
         script: |
-          flutter build ios --debug --no-codesign
+          flutter build ios --debug --simulator
     artifacts:
+      - build/ios/iphonesimulator/Runner.app
       - flutter_drive.log
     publishing:
       email:
