Fix code signing command and switch to automatic signing
- Remove invalid --target argument from xcode-project command
- Switch ExportOptions to automatic signing with Team ID
- Use Team ID TQWXNLXN3C from your Apple Developer account
- Simplify build process to resolve provisioning profile detection

--- a/gopayna/ios/ExportOptions.plist
+++ b/gopayna/ios/ExportOptions.plist
@@ -11,13 +11,8 @@
     <key>uploadSymbols</key>
     <true/>
     <key>signingStyle</key>
-    <string>manual</string>
-    <key>provisioningProfiles</key>
-    <dict>
-        <key>com.gopayna.app</key>
-        <string>GoPayna App Store Distribution</string>
-    </dict>
-    <key>signingCertificate</key>
-    <string>iPhone Distribution</string>
+    <string>automatic</string>
+    <key>teamID</key>
+    <string>TQWXNLXN3C</string>
 </dict>
 </plist>
