Comprehensive iOS code signing fix for CodeMagic
- Use login.keychain-db instead of login.keychain (modern macOS)
- Extract and use provisioning profile UUID and name dynamically
- Update ExportOptions.plist dynamically during build
- Use 'Apple Distribution' identity instead of 'iPhone Distribution'
- Set key partition list for codesign access
- Export profile variables for use across build steps
- Better error handling and debugging output

--- a/gopayna/ios/ExportOptions.plist
+++ b/gopayna/ios/ExportOptions.plist
@@ -11,8 +11,13 @@
     <key>uploadSymbols</key>
     <true/>
     <key>signingStyle</key>
-    <string>automatic</string>
+    <string>manual</string>
     <key>teamID</key>
     <string>TQWXNLXN3C</string>
+    <key>provisioningProfiles</key>
+    <dict>
+        <key>com.gopayna.app</key>
+        <string>match AppStore com.gopayna.app</string>
+    </dict>
 </dict>
 </plist>
