--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,15 +4,12 @@ workflows:
     name: iOS Development Build  
     max_build_duration: 60
     instance_type: mac_mini_m1
-    integrations:
-      app_store_connect: codemagic
     environment:
       flutter: stable
       xcode: latest
       cocoapods: default
       vars:
         BUNDLE_ID: "com.gopayna.app.dev"
-        # Will use automatic code signing for development
     cache:
       cache_paths:
         - $FLUTTER_ROOT/.pub-cache
@@ -34,14 +31,13 @@ workflows:
       - name: Flutter analyze
         script: |
           flutter analyze
-      - name: Build IPA for development
+      - name: Build iOS for development (no signing)
         script: |
-          flutter build ipa --release \
-            --export-method=development \
+          flutter build ios --debug --no-codesign \
             --build-name=1.0.$BUILD_NUMBER \
             --build-number=$BUILD_NUMBER
     artifacts:
-      - build/ios/ipa/*.ipa
+      - build/ios/iphoneos/Runner.app
       - flutter_drive.log
     publishing:
       email:
