Add iOS device testing workflow for friend's iPhone

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,57 @@
 workflows:
-  # iOS Development Build (For Device Testing)
+  # iOS Device Testing Build (Signed for iPhone)
+  ios-device:
+    name: iOS Device Testing Build
+    max_build_duration: 60
+    instance_type: mac_mini_m1
+    environment:
+      flutter: stable
+      xcode: latest
+      cocoapods: default
+      ios_signing:
+        distribution_type: development
+        bundle_identifier: com.gopayna.app
+      vars:
+        BUNDLE_ID: "com.gopayna.app"
+    cache:
+      cache_paths:
+        - $FLUTTER_ROOT/.pub-cache
+        - $HOME/Library/Caches/CocoaPods
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: main
+          include: true
+          source: true
+    scripts:
+      - name: Get Flutter dependencies
+        script: |
+          flutter pub get
+      - name: Install CocoaPods dependencies
+        script: |
+          cd ios && pod install
+      - name: Flutter analyze
+        script: |
+          flutter analyze
+      - name: Build IPA for device testing
+        script: |
+          flutter build ipa --release \
+            --export-method=development \
+            --build-name=1.0.$BUILD_NUMBER \
+            --build-number=$BUILD_NUMBER
+    artifacts:
+      - build/ios/ipa/*.ipa
+      - flutter_drive.log
+    publishing:
+      email:
+        recipients:
+          - valuemaxcodershub@gmail.com
+        notify:
+          success: true
+          failure: true
+
+  # iOS Development Build (Simulator Only)
   ios-development:
     name: iOS Development Build  
     max_build_duration: 60
